cabal-version: 3.0

name:           blueripple-post-tools
version:        0.1.0.0
synopsis:       Basic data types for blueripple data
category:       Data
homepage:       https://github.com/blueripple/post-tools#readme
bug-reports:    https://github.com/blueripple/post-tools/issues
author:         Adam Conner-Sax
maintainer:     adam@blueripplepolitics.org
copyright:      2024 Adam Conner-Sax
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/blueripple/post-tools

library
  exposed-modules: BlueRipple.Configuration
                 , BlueRipple.Utilities.KnitUtils
                 , BlueRipple.Utilities.TableUtils
                 , BlueRipple.Utilities.Heidi
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
       Frames >= 0.7 && < 0.8
     , Frames-hvega >= 0.2 && < 0.4
     , Frames-utils >= 0.3.1
     , Frames-streamly >= 0.2
     , Frames-serialize >= 0.1.0
     , aeson >= 2.2 && < 2.3
     , blaze-colonnade >= 1.2 && < 1.3
     , blaze-html >= 0.9.1 && < 0.10
     , bytestring >= 0.11.5 && < 0.12
     , cmdargs >= 0.10.22 && < 0.11
     , containers >= 0.6.7 && < 0.7
     , directory >= 1.3 && < 1.5
     , flat >= 0.5 && < 0.7
     , heidi >= 0.1 && < 0.2
     , hvega >= 0.12 && < 0.14
     , base >=4.12.0 && <5
     , foldl >= 1.4 && < 1.5
     , here >= 1.2 && < 1.3
     , hvega >= 0.12 && < 0.15
     , hvega-utils >= 0.3 && < 0.4
     , knit-haskell >= 0.10.5 && < 0.11
     , lens >= 5 && < 6
     , mtl >= 2.3.1 && < 2.4
     , pandoc >= 3.1 && < 3.5
     , path >= 0.9.4 && < 0.10
     , path-io >= 1.8 && < 1.9
     , polysemy >= 1.9 && < 1.10
     , primitive >= 0.9 && < 0.12
     , relude >= 1.0.0 && < 1.3
     , say >= 0.1 && < 0.2
     , streamly >=0.9 && <0.11
     , streamly-core >=0.1.0 && <0.3
     , text >=1.2.3 && < 2.2
     , time >= 1.12 && < 1.13
     , vector >= 0.12 && < 0.14
     , vector-th-unbox >= 0.2 && < 0.3
     , vinyl >= 0.13 && < 0.15

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010
